[package]
name = "tracing-kickstart"
version = "0.3.0"
authors = ["Kyle King"]
edition = "2024"
description = "Bootstrap tracing + OTEL connections. Intended for personal use only."
repository = "https://github.com/kylekingcdn/tracing-kickstart-rs"
license = "MIT"

[features]
default = []
tokio_console = ["dep:console-subscriber"]

[dependencies]
console-subscriber = { version = "0.4.1", optional = true }
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["http-proto", "internal-logs", "logs", "metrics", "trace", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry-resource-detectors = "0.9.0"
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
